2020-09-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix check for updates on startup when accelmap is missing (Windows not affected)

2020-09-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not show exact match with prefix if exact match without prefix was found, in completion

2020-09-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix font coverage check
	* Only perform continuous conversion when convert tab is visible

2020-09-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Resize window on keypad or app font change

2020-09-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Insert operator symbols on appropriate key press in various entries for mathematical expressions
	* Do not list objects in category with name that is a substring of another category
	* Fix continuous parsing of "to"-expression with variable without unit
	* Do not italicize %, ‰, and ‱

2020-08-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix potential precision loss when performing multiple consecutive unit conversions
	* Option to remember window position

2020-08-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix unit conversion search entry losing focus
	* Clear search entries when entering character with entry not in focus

2020-08-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "Copy result to clipboard" to Gnome shell search provider
	* Increase default precision to 10

2020-08-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reduce time before GUI appears on load

2020-08-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add composite units to completion
	* Add category to SI unit titles in completion
	* Group hexadecimal digits

2020-08-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show error message when gnuplot is not installed when the user tries to open the plot dialog, instead of disabling the menu item

2020-08-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
