@@ -21004,7 +21004,10 @@ void entry_insert_text(GtkWidget *w, const gchar *text) {
 	gtk_widget_grab_focus(w);
 	gtk_editable_select_region(GTK_EDITABLE(w), pos, pos);
 }
+
+bool block_input = false;
 const gchar *key_press_get_symbol(GdkEventKey *event, bool do_caret_as_xor = true, bool unit_expression = false) {
+	if(block_input && (event->keyval == GDK_KEY_q || event->keyval == GDK_KEY_Q) && (event->state & ~GDK_CONTROL_MASK)) {block_input = false; return "";}
 #if GTK_MAJOR_VERSION > 3 || GTK_MINOR_VERSION >= 18
 	guint state = event->state & gdk_keymap_get_modifier_mask(gdk_keymap_get_for_display(gtk_widget_get_display(mainwindow)), GDK_MODIFIER_INTENT_DEFAULT_MOD_MASK);
 	state = state & ~GDK_SHIFT_MASK;
@@ -21026,8 +21029,16 @@ const gchar *key_press_get_symbol(GdkEventKey *event, bool do_caret_as_xor = tru
 	}
 	if(state != 0) return NULL;
 	switch(event->keyval) {
-		case GDK_KEY_asciicircum: {}
 		case GDK_KEY_dead_circumflex: {
+#ifdef _WIN32
+			// fix dead key
+			block_input = true;
+			INPUT ip; ip.type = INPUT_KEYBOARD; ip.ki.wScan = 0; ip.ki.time = 0; ip.ki.dwExtraInfo = 0;
+			ip.ki.wVk = 0x51; ip.ki.dwFlags = 0; SendInput(1, &ip, sizeof(INPUT));
+			ip.ki.dwFlags = KEYEVENTF_KEYUP; SendInput(1, &ip, sizeof(INPUT));
+#endif
+		}
+		case GDK_KEY_asciicircum: {
 			bool input_xor = !do_caret_as_xor && caret_as_xor;
 			return input_xor ? " xor " : "^";
 		}
@@ -29123,6 +29134,7 @@ gboolean on_configure_event(GtkWidget*, GdkEventConfigure *event, gpointer) {
 }
 
 gboolean on_key_press_event(GtkWidget *o, GdkEventKey *event, gpointer) {
+	if(block_input && (event->keyval == GDK_KEY_q || event->keyval == GDK_KEY_Q) && (event->state & ~GDK_CONTROL_MASK)) {block_input = false; return TRUE;}
 	if(gtk_widget_has_focus(expressiontext) || b_editing_stack) return FALSE;
 	if(!b_busy && gtk_widget_has_focus(GTK_WIDGET(gtk_builder_get_object(main_builder, "mb_to"))) && !gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(gtk_builder_get_object(main_builder, "mb_to"))) && (event->keyval == GDK_KEY_Return || event->keyval == GDK_KEY_ISO_Enter || event->keyval == GDK_KEY_KP_Enter || event->keyval == GDK_KEY_space)) {update_mb_to_menu(); gtk_widget_grab_focus(GTK_WIDGET(gtk_builder_get_object(main_builder, "mb_to")));}
 	if(do_keyboard_shortcut(event)) return TRUE;
@@ -29164,6 +29176,7 @@ gboolean on_expressiontext_focus_out_event(GtkWidget*, GdkEvent*, gpointer) {
 	return FALSE;
 }
 gboolean on_expressiontext_key_press_event(GtkWidget*, GdkEventKey *event, gpointer) {
+	if(block_input && (event->keyval == GDK_KEY_q || event->keyval == GDK_KEY_Q) && (event->state & ~GDK_CONTROL_MASK)) {block_input = false; return TRUE;}
 	if(b_busy) {
 		if(event->keyval == GDK_KEY_Escape) {
 			if(b_busy_expression) on_abort_calculation(NULL, 0, NULL);
@@ -29250,8 +29263,16 @@ gboolean on_expressiontext_key_press_event(GtkWidget*, GdkEventKey *event, gpoin
 			execute_expression();
 			return TRUE;
 		}
-		case GDK_KEY_asciicircum: {}
 		case GDK_KEY_dead_circumflex: {
+#ifdef _WIN32
+			// fix dead key
+			block_input = true;
+			INPUT ip; ip.type = INPUT_KEYBOARD; ip.ki.wScan = 0; ip.ki.time = 0; ip.ki.dwExtraInfo = 0;
+			ip.ki.wVk = 0x51; ip.ki.dwFlags = 0; SendInput(1, &ip, sizeof(INPUT));
+			ip.ki.dwFlags = KEYEVENTF_KEYUP; SendInput(1, &ip, sizeof(INPUT));
+#endif
+		}
+		case GDK_KEY_asciicircum: {
 			bool input_xor = (caret_as_xor != ((event->state & GDK_CONTROL_MASK) > 0));
 			if(rpn_mode && rpn_keys) {
 				calculateRPN(input_xor ? OPERATION_BITWISE_XOR : OPERATION_RAISE);
