@@ -1,3 +1,7 @@
+2020-09-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix input of circumflex with dead circumflex key on Windows with new GTK version
+
 2020-09-13 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix check for updates on startup when accelmap is missing (Windows not affected)
